--- a/package.json
+++ b/package.json
@@ -9,20 +9,26 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@emotion/native": "^11.11.0",
     "@gorhom/bottom-sheet": "^4.6.4",
+    "@react-native-community/geolocation": "^3.4.0",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "@types/react": "~18.2.79",
     "expo": "~51.0.28",
+    "expo-location": "~17.0.1",
     "expo-status-bar": "~1.12.1",
     "nativewind": "4.0.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-maps": "1.14.0",
+    "react-native-maps-directions": "^1.9.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
+    "react-native-size-matters": "^0.4.2",
     "tailwindcss": "^3.4.11",
     "typescript": "~5.3.3"
   },
