icon and color updates

--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@react-navigation/stack": "^6.4.1",
     "@types/react": "~18.2.79",
     "expo": "~51.0.28",
+    "expo-blur": "^13.0.2",
+    "expo-linear-gradient": "^13.0.2",
     "expo-location": "~17.0.1",
     "expo-status-bar": "~1.12.1",
     "nativewind": "4.0.1",
@@ -33,7 +35,8 @@
     "typescript": "~5.3.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "babel-plugin-module-resolver": "^5.0.2"
   },
   "private": true
 }
