--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@emotion/native": "^11.11.0",
+    "@expo/ngrok": "^4.1.3",
     "@gorhom/bottom-sheet": "^4.6.4",
     "@react-native-community/geolocation": "^3.4.0",
     "@react-navigation/native": "^6.1.18",
